Note- and SpeakBrick now use FormulaEditor. Substraction a NUMBER from a Stringfunction caused and uncaught exception. Prototypeview for Mathfunctions. Delete of unused resources in strings.xml
Note- and SpeakBrick test update:

* testSoundBrickDefaultValues update
* testComputeDialog update

Fix of lint and checkstyle warnings.
Fix of Checkstyle, PMD and FindBugs warnings.

Update of Formula Editor Keyboard:

* Remove of RAND-button and update of tests.
* Update of STRING-button width.
* Math changed Functions on english keyboard.

Fix of FindBugs warnings.